30/11/25 Login desde Angular al backend con usuario admin creado al ejecutar el proyecto con DataLoader, usando JWT para la autenticación